Minor fixes to names and JDK libs